# ADAM-2D

./: .gitignore  MUJOCO_LOG.TXT
control_py/: bezier.py  hlip_controller.py  main.py  poly.py  restart_acc.py
kinematics/: CMakeLists.txt
kinematics/include/: adam_kinematics.h  kinematics_definitions.h
kinematics/src/: adam_kinematics.cpp
kinematics/test/: main.cpp  test_fk.cpp  test_ik.cpp  test_pin.cpp  test_pin_v_mjc.cpp
kinematics_py/: adam_kinematics.py
plot/: hlip_vis.asv  hlip_vis.m  log.csv  logger.py  plot_log.asv  plot_log.m  plot_log_tracking_invariant.asv  plot_log_tracking_invariant.m  restart_plot.asv  restart_plot.m  tracking_NOgravcomp.fig  tracking_gravcomp.fig
rsc/: config.yaml  track_inv_config.yaml
rsc/models/: adam.xml  adam2d.xml  adam2d_no_pv_ctrl.xml  adam2d_tsc.xml  adamDev.urdf
simulation/: CMakeLists.txt
simulation/include/: mujoco_interface.h  mujoco_types.h
simulation/src/: mujoco_interface.cpp
simulation/test/: sim_test.cpp
simulation_py/: mujoco_interface.py
tracking_invariants/: main.py  tracking_invariant.py  visualize_results.py
